Week6 update
