# controllers/user.js
@@ -1,75 +1,74 @@
 
-const passwordUtil = require('../util/passwordComplexityCheck');
 const db = require('../models');
 const User = db.user;
+const passwordUtil = require('../util/passwordComplexityCheck');
 
-
-const getAll = async (req, res) => {
+module.exports.createUser = (req, res) => {
   try {
-    User.find({})
-    .then((data) => {
-      res.status(200).send(data);
-    })
-    .catch((err) => {
-      res.status(500).send({
-         message: err.message || 'Some error occured while retrieving users.'
+    if (!req.body.username || !req.body.password) {
+      res.status(400).send({ message: 'Content can not be empty!' });
+      return;
+    }
+    const password = req.body.password;
+    const passwordCheck = passwordUtil.passwordPass(password);
+    if (passwordCheck.error) {
+      res.status(400).send({ message: passwordCheck.error });
+      return;
+    }
+    const user = new User(req.body);
+    user
+      .save()
+      .then((data) => {
+        console.log(data);
+        res.status(201).send(data);
+      })
+      .catch((err) => {
+        res.status(500).send({
+          message: err.message || 'Some error occurred while creating the user.'
+        });
       });
-    });
-} catch (err) {
-  res.status(500).json(err);
-  }
-};
-
-const getSingle = async (req, res) => {
-  try {
-    const username = req.params.username;
-    User.find({ username: username })
-    .then((data) => {
-      res.status(200).send(data);
-    })
-    .catch((err) => {
-      res.status(500).send({
-         message: err.message || 'Some error occured while retrieving users'
-      });
-    });
   } catch (err) {
     res.status(500).json(err);
   }
 };
 
-const createUser = async (req, res) => {
+module.exports.getAll = (req, res) => {
   try {
-    if (!req.body.userName || !req.body.password || !req.body.firstName || !req.body.lastName 
-      || !req.body.email || !req.body.phone || !req.body.designation) {
-        res.status(400).send({ message: "Content can not be empty!" });
-        return;
-      }
-      const password = req.body.password;
-      const passwordCheck = passwordUtil.passwordPass(password);
-      if (passwordCheck.error) {
-        res.status(400).send({ message: passwordCheck.error });
-        return;
-      }
-  const user = new User(req.body);
-  user
-    .save()
-    .then((data) => {
-      console.log(data);
-      res.status(201).send(data);
-    })
-    .catch((err) => {
-      res.status(500).send({ message: err.message || 'Some error occured while creating the user.'
-    });
-
-    });
-} catch (err) {
-  res.status(500).json(err);
-}
+    User.find({})
+      .then((data) => {
+        res.status(200).send(data);
+      })
+      .catch((err) => {
+        res.status(500).send({
+          message: err.message || 'Some error occurred while retrieving users.'
+        });
+      });
+  } catch (err) {
+    res.status(500).json(err);
+  }
 };
 
-const updateUser = async (req, res) => {
+module.exports.getUser = (req, res) => {
   try {
     const username = req.params.username;
+    User.find({ username: username })
+      .then((data) => {
+        res.status(200).send(data);
+      })
+      .catch((err) => {
+        res.status(500).send({
+          message: err.message || 'Some error occurred while retrieving users.'
+        });
+      });
+  } catch (err) {
+    res.status(500).json(err);
+  }
+};
+
+module.exports.updateUser = async (req, res) => {
+  try {
+    const username = req.params.username;
+    User.find({username: username})
     if (!username) {
       res.status(400).send({ message: 'Invalid Username Supplied' });
       return;
@@ -89,9 +88,8 @@ const updateUser = async (req, res) => {
       user.phone = req.body.phone;
       user.designation = req.body.designation;
       user.save(function (err) {
-        if  (err) {
-          res.status(500).json(err || 'Some error occured while updating the contact');
-
+        if (err) {
+          res.status(500).json(err || 'Some error occurred while updating the contact.');
         } else {
           res.status(204).send();
         }
@@ -102,14 +100,13 @@ const updateUser = async (req, res) => {
   }
 };
 
-const deleteUser = async (req, res) => {
+module.exports.deleteUser = async (req, res) => {
   try {
     const username = req.params.username;
-    if (username) {
+    if (!username) {
       res.status(400).send({ message: 'Invalid Username Supplied' });
       return;
     }
-
     User.deleteOne({ username: username }, function (err, result) {
       if (err) {
         res.status(500).json(err || 'Some error occurred while deleting the contact.');
@@ -120,12 +117,4 @@ const deleteUser = async (req, res) => {
   } catch (err) {
     res.status(500).json(err || 'Some error occurred while deleting the contact.');
   }
-};
-
-module.exports = {
-  getAll,
-  getSingle,
-  createUser,
-  updateUser,
-  deleteUser
 };
